# autoclr

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
autoclr/: README.md  __init__.py
autoclr/loaders/: default.py  offline.py  online.py  system.py
binaries/: README.md
tests/: test_default.py  test_offline.py  test_online.py  test_reference.py  test_system.py
tests/lib/: TestLib.deps.json
