[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "autoclr"
authors = [{name = "somehitDev", email = "this.dev.somehit@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version", "description"]
dependencies = [
    "pythonnet==3.0.5",
    "wget==3.2"
]
classifiers = [
    "License :: OSI Approved :: MIT License",

    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",

    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[project.urls]
Repository = "https://github.com/somehitDev/autoclr"
